[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/entankUlt.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/EnemyUlt.gd" type="Script" id=2]
[ext_resource path="res://Scenes/EnemyHealthBar.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 106.996, 86.0025 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 128.996, 100.002 )

[sub_resource type="CircleShape2D" id=3]
radius = 2103.03

[node name="EnemyUlt" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 4
collision_mask = 11
script = ExtResource( 2 )
killed_color = Color( 1, 1, 1, 0.392157 )

[node name="entankUlt" parent="." instance=ExtResource( 1 )]

[node name="BulletPoint" type="Node2D" parent="entankUlt"]
position = Vector2( 187.164, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
modulate = Color( 0, 0.101961, 0.380392, 1 )
shape = SubResource( 2 )

[node name="EnemyHealthBar" parent="." instance=ExtResource( 3 )]
margin_left = -107.469
margin_top = -244.865
margin_right = 92.5313
margin_bottom = -218.865

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 3 )
[connection signal="enemy_ult_health_updated" from="." to="EnemyHealthBar" method="_on_EnemyUlt_enemy_ult_health_updated"]
[connection signal="killed" from="." to="entankUlt" method="_on_EnemyUlt_killed"]
[connection signal="killed" from="." to="." method="_on_EnemyUlt_killed"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
